--- a/sections/3/input_and_output_devices.tex
+++ b/sections/3/input_and_output_devices.tex
@@ -3,8 +3,66 @@
 
 \begin{document}
 
-\paragraph{Stub}
+\subsection{Input Devices}
 
-stub
+Input devices detect actions from the user. For example, a touchscreen detects the action of the user touching the screen, and a button detects the action of the user pressing the switch down. Examples of input devices include:
+
+\begin{itemize}
+    \item \textbf{Barcode Scanners}, which scans barcodes
+    \item \textbf{QR Code Scanners}, which scans QR codes
+    \item \textbf{Keyboards}, for text input
+    \item \textbf{Mice (Optical Mice)}, which gives user precise position based inputs into a computer.
+    \item \textbf{Touchpads/Trackpads}, which does the same thing as a mouse, but it revolves around the user moving their finger on a sensitive surface.
+    \item \textbf{Digital Cameras}, which capture the outside world as binary data
+    \item \textbf{Microphones}, which record sound data and convert it into digital sound waves.
+    \item \textbf{Scanners} captures 2D images or 3D models of a physical object in a precise way.
+        \begin{itemize}
+            \item 2D scanners scan 2D documents and such to create a typically black-and-white image that is sharp. Similar to a camera, but works best for documents.
+            \item 3D scanners employ complex technology to create 3D models of objects you place in it.
+        \end{itemize}
+    \item \textbf{Touchscreens}, which allows the user to touch the screen itself to allow less-precise but human gesture controls for a computer/phone/tablet.
+        \begin{itemize}
+            \item Resistive Touchscreens have a flexible layer on top of the display. When the user presses the screen, the bottom of the display can detect where the user pressed on the flexible layer.
+            \item Capacitive Touchscreens detect touches by seeing if there is a conductive material on the surface of it, which is electrically charged. Since your finger is very minimally conductive, it can detect it as a touch.
+            \item Infrared Touchscreens detect touches by shining a row and column of closely-packed infrared lasers. When your finger blocks 2 beams, the x and y coordinates are sent to the computer.
+        \end{itemize}
+\end{itemize}
+
+
+Note that details about the devices themselves arent provided. Please research on your own or refer to the textbook.
+
+\subsection{Output Devices}
+
+Output devices allows a computer system to create a tangible reaction or an event in the real world, like displaying data or starting a water pump.
+
+\begin{itemize}
+    \item \textbf{Displays}, or screens are found in laptops, TVs, tablets, phones, etc. Their role is obvious. 
+    \item \textbf{Projectors} are like displays, but they generate light beams that shine the computer's output into a surface, like a wall, whiteboard or a projector screen.
+    \item \textbf{Actuators}, including things like solenoids and pumps creates motion that is controlled by a computer. As an example, a solenoid is like a piston; it pushes things.
+    \item \textbf{Printers} convert image data from a computer\footnote{Fun fact: text must be rendered as pixels before it can be printed, so it is image data!} and puts it onto paper. There are 3 types of printers.
+        \begin{itemize}
+            \item Laser Printers shine a laser onto toner, which is a very fine powder that acts as a dye onto a piece of paper, basically burning it into the paper. Almost all workplaces and schools uses them.
+            \item Inkjet Printers shoot very small jets of ink onto paper. They produce better colors than laser, which is why they are used more in art institutions.
+            \item Dot-matrix Printers are very old and typically only used in airports. They are the loudest, and make a high pitched screeching noise. You may have seen them near boarding gates; they punch very shallow holes and fill them with ink in a matrix of dots. The resolution and quality is low.
+        \end{itemize}
+    \item \textbf{Speakers} broadcast computerized binary sound data.
+    \item \textbf{3D printers} are like 2D printers, but they use a filament that is heated up to produce accurate reproductions of 3D models in a computer/
+\end{itemize}
+
+\subsection{Sensors}
+
+Sensors detect changes in the surrounding environment, i.e. they \emph{sense} the things happening around it. As data in the real world is always analog, it must always go through an ADC (Analog to Digital Converter, \emph{NOT a DAC!})
+
+\begin{itemize}
+    \item \textbf{Temperature Sensors} sense temperature.
+    \item \textbf{Humidity Sensors} sense the concentration of water in the air.
+    \item \textbf{Acoustic Sensors} detect specific sounds, like the sound of glass breaking in a criminal-infested museum.
+    \item \textbf{Pressure Sensors} detect how hard an object has been pressed. Pressure sensors that detect the pressure of a container do also exist, but they are usually not digital.
+    \item \textbf{Gas Sensors} detects the concentration of a specific gas in the air.
+    \item \textbf{An accelerometer} detects the acceleration of an object, like sudden shakes or movements of a phone.
+    \item \textbf{A Gyroscope} detects the movement of an object in space, including forward and backward movements, up and down movement and rotation. In essence, a more precise accelerometer.
+    \item \textbf{An active infrared sensor} detects if beams of infrared light are blocked or not. A signal will be sent out if it is.
+    \item \textbf{A passive infrared sensor} detects IR heat radiation.
+\end{itemize}
 
 \end{document}
