tempoarily finish ch3

--- a/sections/3/data_storage.tex
+++ b/sections/3/data_storage.tex
@@ -257,6 +257,10 @@ QR codes are like barcodes, but 2D. Consider the following QR code that stores s
 
 They are 2D matrices of squares that store small amounts of data; but more so than barcodes. They store binary data, and have error correction data encoded within them, to avoid errors in reading when the QR code is damaged. There are also large regions that act as anchors for QR code reading software to de-warp the QR code if scanned at an angle.
 
+\subsection{Cloud Storage}
+
+stub
+
 \subsection{Medium vs. Storage Device}
 \label{3:sec:medium_vs_storage_device}
 
