progress(ch3) + begin(ch4)

--- a/sections/3/data_storage.tex
+++ b/sections/3/data_storage.tex
@@ -122,6 +122,7 @@ ROM is like RAM, however, it stands for \emph{read-only memory.} Like RAM (see s
 The main use of ROM in computers is to store the BIOS/UEFI. This is code that the CPU executes immediately when the computer starts up. It does critical checks to make sure all your peripherals are working (like your keyboard), applies specific security patches to your CPU that the CPU maker sees fit, and loads the OS (see section \label{4:sec:the_os_and_kernel}. Increasing the size of ROM does nothing in most systems. ROM is \textbf{Primary Storage.}
 
 \subsection{Virtual Memory}
+\label{3:sec:virtmem}
 
 Virtual Memory is quite a complicated topic. In essence, it is memory made by combining physical RAM and space on your hard drive (HDD or SSD) called the swap space, swap area or swap file to create chunks of memory for each program to use independently.
 
