--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,9 @@
 \usepackage{minted}
 \usepackage{longtable}
 \usepackage{float}
+\usepackage{tabularx}
+\usepackage[table]{xcolor}
+\usepacakge{array}
 \setmonofont{Cascadia Code}
 
 \newfontfamily\ccbold{Cascadia Code Bold}
