--- a/sections/3/input_and_output_devices.tex
+++ b/sections/3/input_and_output_devices.tex
@@ -50,6 +50,7 @@ Output devices allows a computer system to create a tangible reaction or an even
 \end{itemize}
 
 \subsection{Sensors}
+\label{3:sec:sensors}
 
 Sensors detect changes in the surrounding environment, i.e. they \emph{sense} the things happening around it. As data in the real world is always analog, it must always go through an ADC (Analog to Digital Converter, \emph{NOT a DAC!})
 
