--- a/sections/6/automated_systems.tex
+++ b/sections/6/automated_systems.tex
@@ -69,4 +69,6 @@ Automated systems have a lot of applications (Taken from textbook and syllabus).
     \item \textbf{Automated systems that connect to networks are subject to cyber-attacks}, which may halt critical processes.
 \end{itemize}
 
+In call cases, automated systems can help the vast majority of people in these industries speed up boring and repetitive tasks. More info can be found in the textbook (pages 218~229 all contain examples).
+
 \end{document}
