rebase with tree on other machine

--- a/sections/4/userspace_software.tex
+++ b/sections/4/userspace_software.tex
@@ -1,10 +1,14 @@
 \documentclass[../main.tex]{subfiles}
-\graphicspath{{\subfix{../images/}}}
+\graphicspath{{\subfix{../../images/}}}
 
 \begin{document}
 
-\paragraph{Stub}
+Userspace software differs from the software mentioned in section \ref{4:sec:the_os_and_kernel}. Cambridge refers to this simply as application software, but the real distinction comes from \emph{whether the program has direct access to physical memory and devices, or if the program must run through virtual memory and device drivers.}
 
-stub
+Examples of Application Software\footnote{counts as userspace software!} include:
+
+\begin{itemize}
+    \item 
+\end{itemize}
 
 \end{document}
